urine - chemical component - pod now 3 per row on desktop. https://app.asana.com/0/7908989541876/7936835670273

--- a/js/template/test/urineanalysis/ChemicalComponent.html
+++ b/js/template/test/urineanalysis/ChemicalComponent.html
@@ -1,34 +1,26 @@
 <div class="view-test-urine-analysis-chemical-component">
     <div class="yui3-g-r">
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="glucose"></div>
-                    </div>
-                </div>
-
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="protein"></div>
-                    </div>
-                </div>
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+            <div class="yui3-u-c">
+                <div class="glucose"></div>
             </div>
         </div>
 
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="ketones"></div>
-                    </div>
-                </div>
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+            <div class="yui3-u-c">
+                <div class="protein"></div>
+            </div>
+        </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="bilirubin"></div>
-                    </div>
-                </div>
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+            <div class="yui3-u-c">
+                <div class="ketones"></div>
+            </div>
+        </div>
+
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+            <div class="yui3-u-c">
+                <div class="bilirubin"></div>
             </div>
         </div>
     </div>
