--- a/css-sass/view/subtest/pod/_base.scss
+++ b/css-sass/view/subtest/pod/_base.scss
@@ -12,12 +12,13 @@
 	}
 
 	.title {
-		font-size: 131%;
+		font-size: 138.5%;
 		font-weight: bold;
 		text-align: center;
 
 		padding-bottom: 10px;
 		border-bottom: 1px solid #6b6b6b;
+        text-transform: uppercase;
 	}
 
     @mixin small {
@@ -30,6 +31,12 @@
 		.title {
 			padding-bottom: 5px;
 		}
+    }
+
+    &.title-no-text-transform {
+        .title {
+            text-transform: none;
+        }
     }
 
     &.small {
