urine - ph: update center text https://app.asana.com/0/7908989541876/7936835670284

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -189,6 +189,14 @@
     }
 
     .property.ph {
+        .diagram-palette {
+            .label {
+                font-size: 360%;
+                letter-spacing: -3px;
+                bottom: 43%;
+            }
+        }
+
         .legend {
             position: absolute;
             font-weight: bold;
