--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -44,10 +44,15 @@
 
         >.text {
             margin-top: 0;
+            margin-bottom: 0;
         }
     }
 
     &.expanded {
+        >.header {
+            padding-bottom: 0;
+        }
+
         >.body {
             display: block;
         }
