Centered test headings. https://app.asana.com/0/7908989541876/7931950915903

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -103,8 +103,8 @@
 
     .title {
         display: inline-block;
-        overflow: hidden;
         margin-top: ($headerHeight - $iconHeight) / 2;
+        position: relative;
 
         .icon {
             float: left;
@@ -120,6 +120,11 @@
             font-size: 153.9%;
             font-weight: bold;
             line-height: $iconHeight;
+
+            position: absolute;
+            top: 0;
+            left: $iconWidth + 20px;
+            white-space: nowrap;
         }
     }
 
