--- a/js/template/test/base/Header.html
+++ b/js/template/test/base/Header.html
@@ -1,6 +1,6 @@
 
-<div class="page-section header test-header {{type}}">
-    <div class="yui3-g page-section">
+<div class="header test-header {{type}}">
+    <div class="yui3-g">
         <div class="yui3-u-1">
             <span class="title">
                 <span class="icon"></span>
