--- a/css/screen.css
+++ b/css/screen.css
@@ -3063,6 +3063,7 @@ span.placeholder {
   overflow: hidden;
   cursor: pointer;
   text-align: center;
+  padding-right: 170px;
   /* for scrolling */
   z-index: 1;
   position: relative;
@@ -3074,7 +3075,7 @@ span.placeholder {
 }
 .test-header .title .icon {
   float: left;
-  margin-right: 12px;
+  margin-right: 100px;
   width: 40px;
   height: 40px;
   margin-left: 10px;
@@ -3106,6 +3107,7 @@ span.placeholder {
   .test-header {
     height: 55px;
     text-align: left;
+    padding-right: 0;
     padding-left: 10px;
   }
   .test-header .title {
