overview: updated font sizes https://app.asana.com/0/7908989541876/7906899007931

--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -275,7 +275,8 @@
 
 	.contact {
 		@include secondaryFont;
-		@include smallFontSize;
+		@include mediumFontSize;
+		font-weight: bold;
 		background-repeat: no-repeat;
 		background-position: left 3px;
 		margin: 0;
