--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -60,6 +60,10 @@
         background-repeat: no-repeat;
         position: relative;
 
+        p {
+            color: #6c6c6c;
+        }
+
         .icon {
             display: block;
 
