--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -5,7 +5,8 @@
             <div class="inner">
                 <div class="text">
                     <div>
-                        <span class="value">{{value}}</span>&nbsp;<span class="unit">{{unit}}</span>
+                        <span class="value">{{value}}</span>
+                        <span class="unit">{{unit}}</span>
                     </div>
                 </div>
                 <div class="pointer"></div>
