--- a/js/template/test/base/Header.html
+++ b/js/template/test/base/Header.html
@@ -3,7 +3,7 @@
     <div class="yui3-g">
         <div class="yui3-u-1">
             <span class="title">
-                <span class="icon"></span>
+                <img class="icon" src="images/test/{{type}}/icon-2x.png" alt="" />
                 <span class="text">{{title}}</span>
             </span>
             <div title="{{#if requiresFollowUp}}Please review your Next Steps for the follow up action.{{else}}{{patient.name}}’s {{simpleTitle}} result was reviewed and everything looks good.{{/if}}" class="status {{#if requiresFollowUp}}bad{{/if}}">
