--- a/css/screen.css
+++ b/css/screen.css
@@ -3091,14 +3091,14 @@ span.placeholder {
 }
 .test-header .title {
   display: inline-block;
-  margin-top: 17px;
+  margin-top: 13.5px;
   position: relative;
 }
 .test-header .title .icon {
   float: left;
   margin-right: 100px;
-  width: 40px;
-  height: 40px;
+  width: 47px;
+  height: 47px;
   margin-left: 10px;
   display: inline-block;
 }
@@ -3106,10 +3106,10 @@ span.placeholder {
   font-family: 'Apercu', sans-serif;
   font-size: 153.9%;
   font-weight: bold;
-  line-height: 40px;
+  line-height: 47px;
   position: absolute;
   top: 0;
-  left: 70px;
+  left: 77px;
   white-space: nowrap;
 }
 .test-header .status {
@@ -3132,15 +3132,21 @@ span.placeholder {
     padding-left: 10px;
   }
   .test-header .title {
-    margin-top: 7.5px;
+    margin-top: 6.5px;
+  }
+  .test-header .title .icon {
+    width: 42px;
+    height: 42px;
   }
   .test-header .title .text {
     font-size: 123.1%;
+    line-height: 42px;
+    left: 72px;
   }
   .test-header .status {
-    width: 40px;
-    height: 40px;
-    top: 7.5px;
+    width: 42px;
+    height: 42px;
+    top: 6.5px;
     right: 60px;
   }
   .test-header .status .text {
@@ -3150,15 +3156,6 @@ span.placeholder {
 
 .test-header.accuplex {
   background-color: #9f2775;
-}
-.test-header.accuplex .title .icon {
-  background-image: url("../images/test/accuplex/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.accuplex .title .icon {
-    background-image: url("../images/test/accuplex/icon-2x.png");
-    background-size: 100%;
-  }
 }
 
 .view-test-accuplex > .body > .overview {
@@ -3170,15 +3167,6 @@ span.placeholder {
 
 .test-header.cbc {
   background-color: #34a778;
-}
-.test-header.cbc .title .icon {
-  background-image: url("../images/test/cbc/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.cbc .title .icon {
-    background-image: url("../images/test/cbc/icon-2x.png");
-    background-size: 100%;
-  }
 }
 
 .view-test-cbc > .body > .overview {
@@ -3250,15 +3238,6 @@ span.placeholder {
 .test-header.chemistry {
   background-color: #1948a2;
 }
-.test-header.chemistry .title .icon {
-  background-image: url("../images/test/chemistry/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.chemistry .title .icon {
-    background-image: url("../images/test/chemistry/icon-2x.png");
-    background-size: 100%;
-  }
-}
 
 .view-test-chemistry > .body > .overview {
   background-color: #2759b9;
@@ -3282,15 +3261,6 @@ span.placeholder {
 .test-header.felv-fiv {
   background-color: #0d8895;
 }
-.test-header.felv-fiv .title .icon {
-  background-image: url("../images/test/felv-fiv/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.felv-fiv .title .icon {
-    background-image: url("../images/test/felv-fiv/icon-2x.png");
-    background-size: 100%;
-  }
-}
 
 .view-test-felv-fiv > .body > .overview {
   background-color: #0f96a4;
@@ -3301,15 +3271,6 @@ span.placeholder {
 
 .test-header.heartworm {
   background-color: #bd362f;
-}
-.test-header.heartworm .title .icon {
-  background-image: url("../images/test/heartworm/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.heartworm .title .icon {
-    background-image: url("../images/test/heartworm/icon-2x.png");
-    background-size: 100%;
-  }
 }
 
 .view-test-heartworm > .body > .overview {
@@ -3322,15 +3283,6 @@ span.placeholder {
 .test-header.ova {
   background-color: #2882e0;
 }
-.test-header.ova .title .icon {
-  background-image: url("../images/test/ova/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.ova .title .icon {
-    background-image: url("../images/test/ova/icon-2x.png");
-    background-size: 100%;
-  }
-}
 
 .view-test-ova > .body > .overview {
   background-color: #2e91f8;
@@ -3342,15 +3294,6 @@ span.placeholder {
 .test-header.thyroxine {
   background-color: #e38306;
 }
-.test-header.thyroxine .title .icon {
-  background-image: url("../images/test/thyroxine/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.thyroxine .title .icon {
-    background-image: url("../images/test/thyroxine/icon-2x.png");
-    background-size: 100%;
-  }
-}
 
 .view-test-thyroxine > .body > .overview {
   background-color: #f99507;
@@ -3361,15 +3304,6 @@ span.placeholder {
 
 .test-header.urine {
   background-color: #674e9f;
-}
-.test-header.urine .title .icon {
-  background-image: url("../images/test/urine/icon.png");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-  .test-header.urine .title .icon {
-    background-image: url("../images/test/urine/icon-2x.png");
-    background-size: 100%;
-  }
 }
 
 .view-test-urine > .body > .overview {
