Updated font sizes. https://app.asana.com/0/7908989541876/7940345242270

--- a/css-sass/_base.scss
+++ b/css-sass/_base.scss
@@ -62,6 +62,10 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     line-height: 115%;
     font-size: 212%;
+
+    @media (max-width:($mq-phone)) {
+        font-size: 167%;
+    }
 }
 
 h2 {
@@ -74,12 +78,6 @@ h4 {
 
     .small {
         text-transform: lowercase;
-    }
-}
-
-@media (max-width:($mq-phone)) {
-    h1 {
-        font-size: 153.9%
     }
 }
 
