--- a/js/template/subtest/pod/Base.html
+++ b/js/template/subtest/pod/Base.html
@@ -1,6 +1,8 @@
 <div class="view-subtest-pod-base {{classes}}">
 	<div class="inner">
-		<div class="title">{{title}}</div>
+        <div class="header">
+            <div class="title">{{title}}</div>
+        </div>
 		<div class="content"></div>
 	</div>
 </div>
