Header status image container width/height.

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -134,8 +134,8 @@
     }
 
     .status {
-        $width: image-width('../images/test/base/follow-up-good-2x.png') / 2;
-        $height: image-height('../images/test/base/follow-up-good-2x.png') / 2;
+        $width: round(image-width('../images/test/base/follow-up-good-2x.png') / 2);
+        $height: round(image-height('../images/test/base/follow-up-good-2x.png') / 2);
         position: absolute;
 
         top: ($headerHeight - $height) / 2;
