Normalized font sizes on mobile. https://app.asana.com/0/7908989541876/7953393041182

--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -78,9 +78,10 @@ $widgetArrowWidthPhone: 17px;
 }
 
 $widgetIndicatorWidth: 32px;
+$widgetIndicatorHeight: $widgetIndicatorWidth;
 .widget-indicator {
     width: $widgetIndicatorWidth;
-    height: 32px;
+    height: $widgetIndicatorHeight;
 
     display: inline-block;
 
