--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -37,6 +37,11 @@
             font-size: 182%;
             font-weight: bold;
             line-height: 100%;
+
+            /* phone */
+            @media (max-width:$mq-phone) {
+                font-size: 138.5%;
+            }
         }
 
         .widget-indicator {
@@ -79,6 +84,11 @@
             vertical-align: middle;
             display: inline-block;
             padding-left: 10px;
+
+            /* phone */
+            @media (max-width:$mq-phone) {
+                font-size: 138.5%;
+            }
         }
 
         .actual {
@@ -147,14 +157,14 @@
             background-color: white;
             border: 1px solid #a3a3a3;
             border-radius: 4px;
-            padding: 15px 20px 15px (20px + $widgetIndicatorWidth);
+            padding: 14px 20px 14px (20px + $widgetIndicatorWidth);
 
             >.inner {
                 position: relative;
 
                 background-image: url("../images/subtest/select/bullet.png");
                 background-repeat: no-repeat;
-                background-position: 7px 6px;
+                background-position: 10px 10px;
 
                 padding-left: 20px;
             }
@@ -162,7 +172,7 @@
             .label {
                 @include secondaryFont;
                 font-size: 182%;
-                line-height: 100%;
+                line-height: $widgetIndicatorHeight;
                 font-weight: bold;
 
                 white-space: nowrap; 
@@ -174,13 +184,21 @@
 
             .widget-indicator {
                 position: absolute;
-                top: -5px;
                 left: - $widgetIndicatorWidth;
                 cursor: pointer;
             }
 
             .description {
                 display: none;
+            }
+
+            /* phone */
+            @media (max-width:$mq-phone) {
+                padding: 7px 10px 7px (10px + $widgetIndicatorWidth);
+
+                .label {
+                    font-size: 138.5%;
+                }
             }
         }
     }
