--- a/css/screen.css
+++ b/css/screen.css
@@ -3916,7 +3916,7 @@ span.placeholder {
   /* phone */
 }
 .view-subtest-select .options {
-  padding: 0;
+  padding: 6px 0;
   margin: 0;
   position: relative;
 }
@@ -3926,7 +3926,7 @@ span.placeholder {
   top: 0;
   bottom: 0;
   border-radius: 21px;
-  box-shadow: inset 0 0 10px #e5e5e5;
+  box-shadow: inset 0 0 7px #e5e5e5;
   border: 1px solid #e5e5e5;
 }
 .view-subtest-select .option {
@@ -3938,7 +3938,7 @@ span.placeholder {
 }
 .view-subtest-select .option .widget-indicator {
   position: absolute;
-  top: 4px;
+  top: -1px;
   left: 6px;
   display: none;
   cursor: pointer;
@@ -3946,16 +3946,10 @@ span.placeholder {
 }
 .view-subtest-select .option .name {
   padding-left: 65px;
-  height: 40px;
-  line-height: 40px;
+  height: 30px;
+  line-height: 30px;
   overflow: hidden;
   text-overflow: clip;
-}
-.view-subtest-select .option:first-child .widget-indicator {
-  top: 5px;
-}
-.view-subtest-select .option.last .widget-indicator {
-  top: 2px;
 }
 .view-subtest-select .option.selected {
   font-size: 182%;
@@ -3974,6 +3968,10 @@ span.placeholder {
   display: none;
 }
 @media (max-width: 630px) {
+  .view-subtest-select .options {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
   .view-subtest-select .indicator-background {
     width: 30px;
     border-radius: 15px;
@@ -3986,8 +3984,6 @@ span.placeholder {
   }
   .view-subtest-select .option .name {
     padding-left: 45px;
-    height: 30px;
-    line-height: 30px;
   }
   .view-subtest-select .option:first-child .widget-indicator {
     top: 0;
