--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -206,6 +206,14 @@
     }
 
     .property.concentration {
+        >.select {
+            margin: 15px 0 0 20px;
+
+            /* phone */
+            @media (max-width:$mq-phone) {
+                margin-left: 10px;
+            }
+        }
     }
 
     .property.ph {
