Updated test colors. https://app.asana.com/0/7908989541876/8008284584725

--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(cbc, #34a778, #30bd84, "diagram-feline-2x.png");
+@include view-test-base-extend(cbc, #00A977, #38B781, "diagram-feline-2x.png");
 
 .view-test-cbc {
     .chart {
