--- a/css-sass/view/test/_chemistry.scss
+++ b/css-sass/view/test/_chemistry.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(chemistry, #1948a2, #2759b9);
+@include view-test-base-extend(chemistry, #074D9F, #3068B4);
 
 .view-test-chemistry {
     .subtest-container {
