Updated test colors. https://app.asana.com/0/7908989541876/8008284584725

--- a/css-sass/view/test/_chemistry.scss
+++ b/css-sass/view/test/_chemistry.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(chemistry, #074D9F, #3068B4);
+@include view-test-base-extend(chemistry, #074d9f, #2759b9);
 
 .view-test-chemistry {
     .subtest-container {
