--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(urine, #673F98, #7259A5);
+@include view-test-base-extend(urine, #5A3492, #6B499E);
 
 .view-test-urine-analysis {
     .test-section-description {
